# pyckage

./: README.md  setup.cfg
src/pyckage/: __init__.py  __main__.py  pyckage.py
src/pyckage/cli/: clear.py  cli.py  config.py  deploy.py  fix.py  pack.py
src/pyckage/pyckagelib/: __init__.py  data.py  error.py  pyckagelib.py  template.py  tracker.py  tree.py
templates/: .pyckage-config  __init__.py.t  package.t  packagelib.__init__.py.t  packagelib.py.t  setup-data.cfg  setup-data.cfg.t  setup-github.cfg  setup-github.cfg.t  setup-script.cfg  setup.cfg  setup.py.t
