[metadata]
# replace with your username:
name = pyckage
version = 0.1.0
author = Pedro Maciel Xavier
author_email = pedromxavier@poli.ufrj.br
description = Python package template generator.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.lam.ufrj.br/~pmxavier/projects/pyckage/
project_urls =
    Bug Tracker = https://github.com/pedromxavier/pyckage/issues
    Source = https://github.com/pedromxavier/pyckage
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X

[options]
package_dir=
    =src
packages =
    pyckage
scripts =
    bin/pyckage
#install_requires =

python_requires = >=3.7, <4

[options.entry_points]
console_scripts =
        pyckage = pyckage:main

[options.data_files]
pyckage_data =
    data/.pyckage-config
    templates/setup.cfg
    templates/setup.py