[metadata]
name = {package}
version = {version}
author = {author}
author_email = {email}
description = {description}
long_description = file: README.md
long_description_content_type = text/markdown
url = {url}
project_urls =
    Bug Tracker = {bugs}
    Source = {source}
classifiers = # All options listed in https://pypi.org/classifiers/
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7, <4
package_dir =
    =src
packages =
    {package}
scripts =
    bin/{package}

[options.entry_points]
console_scripts =
        {package} = {package}:main

[options.data_files]
{package}_data =
    {data_files}